Fixing up image overflow

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -22,7 +22,7 @@
 
 @media screen and (min-width: 400px) {
   .hero-image {
-    max-width: 400px;
+    max-width: 350px;
   }
 }
 
